# bilix

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  MANIFEST.in  README.md  all_test.py  bili_cmd.py  example.py  lighting_downloader.py  live.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  subtitle_convert.py
.github/workflows/: deploy.yml  doc-deploy.yml  python-app.yml
bilix/: __init__.py  __main__.py  __version__.py  _cli.py  _cli_old.py  _handle.py  assign.py  download.py  downloader.py  exception.py  ffmpeg.py  handle.py  log.py  process.py  subtitle.py  utils.py
bilix/api/: __init__.py  _decorator.py  bilibili.py  cctv.py  douyin.py  hanime1.py  jable.py  tiktok.py  yhdmp.py  yinghuacd.py
bilix/cli/: assign.py  core.py  handler.py  main.py
bilix/cli_new/: assign.py  core.py  handler.py  main.py
bilix/dm/: __init__.py  reply.proto  reply_pb2.py  utils.py  view_pb2.py
bilix/download/: __init__.py  auto_downloader.py  base_downloader.py  base_downloader_m3u8.py  base_downloader_part.py  downloader_bilibili.py  downloader_cctv.py  downloader_douyin.py  downloader_hanime1.py  downloader_jable.py  downloader_tiktok.py  downloader_yhdmp.py  utils.py  (+1 more)
dm/: view.proto  view_pb2.py
docs/: advance_guide.md  api_examples.md  async.md  download_examples.md  index.md  install.md  more.md  package.json  quickstart.md
examples/: a_very_simple_example.py  download_by_timerange.py  example.py  limit_download_rate.py  multi_site_download_same_time.py  multi_type_tasks.py  use_of_api.py
tests/: all_test.py  test_utils.py
(+86 files in other folders)
